--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,11 @@ body {
   margin: 0;
   padding: 15px;
   font-family: sans-serif;
-  font-size: 18px;
+  font-size: 24px;
+  line-height: 1.5em;
+}
+
+button {
+  font-size: 24px;
   line-height: 1.5em;
 }
