--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,29 @@ button {
   font-size: 24px;
   line-height: 1.5em;
 }
+
+.overlay {
+  box-sizing: border-box;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  width: 260px;
+  height: 200px;
+  margin-left: -130px;
+  margin-top: -100px;
+  padding: 10px;
+  background-color: #fff;
+  outline: 9999px solid rgba(0, 0, 0, 0.5);
+}
+
+.overlay__close {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  color: red;
+  cursor: pointer;
+}
+
+.overlay div {
+  display: inline;
+}
